Changed testing files

--- a/Gradient_Map.ipynb
+++ b/Gradient_Map.ipynb
@@ -148,14 +148,14 @@
    "outputs": [],
    "source": [
     "# loading image\n",
-    "def compute_laplacian_gm(new_img):\n",
+    "def find_contours(new_img):\n",
     "    x_sz, y_sz = 9, 9\n",
     "\n",
     "    \n",
     "    # remove noise    \n",
-    "#     img = cv2.GaussianBlur(new_img,(3,3),0)\n",
-    "    img = cv2.bilateralFilter(new_img,5, 65, 65)\n",
-    "#     img=gray\n",
+    "\n",
+    "\n",
+    "    img = new_img\n",
     "\n",
     "    plt.figure(figsize=(x_sz,y_sz))\n",
     "    plt.imshow(img, cmap=\"gray\")\n",
@@ -171,8 +171,8 @@
     "    plt.title('Laplacian'), plt.xticks([]), plt.yticks([])\n",
     "    \n",
     "    # Compute gradients along the X and Y axis, respectively\n",
-    "    sobelX = cv2.Sobel(img, cv2.CV_64F, 1, 0)\n",
-    "    sobelY = cv2.Sobel(img, cv2.CV_64F, 0, 1)\n",
+    "    sobelX = cv2.Sobel(lap, cv2.CV_64F, 1, 0)\n",
+    "    sobelY = cv2.Sobel(lap, cv2.CV_64F, 0, 1)\n",
     "    \n",
     "    # The sobelX and sobelY images are now of the floating\n",
     "    # point data type -- we need to take care when converting\n",
