--- a/test_whole_image.ipynb
+++ b/test_whole_image.ipynb
@@ -24,16 +24,11 @@
     "from scipy.misc import imsave\n",
     "from helper import *\n",
     "from create_labels import *\n",
+    "from stats_helper import *\n",
     "\n",
     "%matplotlib inline\n",
     "plt.rcParams['figure.figsize'] = (10.0, 8.0) # set default size of plots\n",
-    "plt.rcParams['image.interpolation'] = 'nearest'\n",
-    "# plt.rcParams['image.cmap'] = 'gray'\n",
-    "\n",
-    "# for auto-reloading external modules\n",
-    "# see http://stackoverflow.com/questions/1907993/autoreload-of-modules-in-ipython\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "plt.rcParams['image.interpolation'] = 'nearest'"
    ]
   },
   {
@@ -45,7 +40,6 @@
     "import skimage.restoration as sr\n",
     "import numpy as np\n",
     "import glob\n",
-    "# import h5py\n",
     "import os\n",
     "import scipy.io as scio\n",
     "from skimage import exposure\n",
@@ -57,7 +51,8 @@
     "%matplotlib inline\n",
     "import re\n",
     "\n",
-    "from helper import *"
+    "from helper import *\n",
+    "from stats_helper import *"
    ]
   },
   {
@@ -98,17 +93,26 @@
     "        if ext == '.npy':\n",
     "            image = np.load(filepath)\n",
     "            h,w = image.shape\n",
-    "            \n",
     "            if h != 512 or w != 64:\n",
-    "#                 print(h,w) \n",
     "                amount = 512 - h\n",
     "                id_full = np.full((amount, 64), 0)\n",
-    "                image = np.concatenate((image, id_full))\n",
-    "#                 print(image.shape)\n",
+    "                try:\n",
+    "                    image = np.concatenate((image, id_full))\n",
+    "                except Exception as e:\n",
+    "                    print(image.shape)\n",
     "        elif ext == '.JPG' or ext == '.tif' or ext =='.png':\n",
-    "            image = ndimage.imread(filepath, mode = \"L\")\n",
+    "            image = ndimage.imread(filepath)\n",
     "        images.append(image)\n",
-    "    return images"
+    "    return images\n",
+    "\n",
+    "def get_data(directory,ext):\n",
+    "    from os import listdir\n",
+    "    from os.path import isfile, join\n",
+    "    \n",
+    "    root_path = \"\"\n",
+    "    filenames = [f for f in listdir(directory) if isfile(join(directory, f)) and f != '.DS_Store']\n",
+    "    filenames = sorted(filenames)\n",
+    "    return filenames, get_info(filenames, directory, ext)"
    ]
   },
   {
@@ -127,14 +131,18 @@
     "# Setting the directories\n",
     "import os\n",
     "\n",
-    "\n",
     "wanted_folder = 'alldata/'\n",
     "# wanted_folder = 'pruned/'\n",
     "# wanted_folder = 'Atrium/'\n",
     "# wanted_folder = 'Ventricle/'\n",
     "\n",
     "cwd = os.getcwd()\n",
-    "cwd = cwd + '/datasets/OCTData/'+wanted_folder\n",
+    "check_directory = cwd\n",
+    "if check_directory == '/home/sim/notebooks/relaynet_pytorch':\n",
+    "    cwd = cwd + '/datasets/OCTData/'+wanted_folder\n",
+    "elif check_directory == '/Users/sim/Desktop/Imperial/Project/PreTrained/relaynet_pytorch':\n",
+    "    cwd = cwd + '/datasets-24-aug/OCTData/'+wanted_folder\n",
+    "\n",
     "print(cwd)"
    ]
   },
@@ -152,16 +160,7 @@
    "outputs": [],
    "source": [
     "whole_raw_image_folder = cwd + 'whole_raw_image/'\n",
-    "print(whole_raw_image_folder)\n",
-    "\n",
-    "root_path = \"\"\n",
-    "filenames = []\n",
-    "for files in os.listdir(whole_raw_image_folder):\n",
-    "    for ext in ['.tif', '.jpg', '.JPG', '.png', '.npy', '.DS_Store']: \n",
-    "        if files.endswith(ext):\n",
-    "            filenames.append(files)\n",
-    "filenames = sorted(filenames)\n",
-    "print(len(filenames))"
+    "print(whole_raw_image_folder)"
    ]
   },
   {
@@ -170,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_images = get_info(filenames, whole_raw_image_folder, '.tif')"
+    "filenames, raw_images = get_data(whole_raw_image_folder, '.tif')"
    ]
   },
   {
@@ -179,7 +178,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(len(filenames))\n",
     "print (len(raw_images))\n",
+    "label = raw_images[0]\n",
+    "label[440:,:] = 0\n",
     "plt.imshow(raw_images[0], cmap='gray')"
    ]
   },
@@ -197,16 +199,9 @@
    "outputs": [],
    "source": [
     "manual_label_folder = cwd + 'manual_label/'\n",
-    "print(whole_raw_image_folder)\n",
-    "\n",
-    "root_path = \"\"\n",
-    "filenames = []\n",
-    "for files in os.listdir(manual_label_folder):\n",
-    "    for ext in ['.tif', '.jpg', '.JPG', '.png', '.npy', '.DS_Store']: \n",
-    "        if files.endswith(ext):\n",
-    "            filenames.append(files)\n",
-    "filenames = sorted(filenames)\n",
-    "print(len(filenames))"
+    "_, manual_labels = get_data(manual_label_folder,'.JPG')\n",
+    "print(filenames[0])\n",
+    "print(manual_labels[0].dtype)"
    ]
   },
   {
@@ -215,17 +210,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = get_info(filenames, manual_label_folder, '.JPG')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print (len(labels))\n",
-    "plt.imshow(labels[0])"
+    "f, axs = plt.subplots(1,2,figsize=(20,20))\n",
+    "plt.subplot(121), plt.imshow(raw_images[0], cmap = \"gray\")\n",
+    "plt.title('Raw OCT Image'), plt.xticks([]), plt.yticks([])\n",
+    "plt.subplot(122), plt.imshow(manual_labels[0])\n",
+    "plt.title('Manually Labelled Image'), plt.xticks([]), plt.yticks([])\n",
+    "# plt.subplot(133),plt.imshow(output)\n",
+    "# plt.title('Automated Label'), plt.xticks([]), plt.yticks([])\n",
+    "plt.show()"
    ]
   },
   {
@@ -242,26 +234,10 @@
    "outputs": [],
    "source": [
     "ids_folder = cwd + 'png_labels_method/'\n",
-    "print(ids_folder)\n",
+    "_, ids = get_data(ids_folder,'.png')\n",
     "\n",
-    "root_path = \"\"\n",
-    "filenames = []\n",
-    "for files in os.listdir(ids_folder):\n",
-    "    for ext in ['.tif', '.jpg', '.JPG', '.png', '.npy', '.DS_Store']: \n",
-    "        if files.endswith(ext):\n",
-    "            filenames.append(files)\n",
-    "filenames = sorted(filenames)\n",
-    "print(len(filenames))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ids = get_info(filenames, ids_folder, '.png')\n",
-    "print (len(labels))\n",
+    "print (len(ids))\n",
+    "print(ids[0].dtype)\n",
     "plt.imshow(ids[0])"
    ]
   },
@@ -390,8 +366,8 @@
    "source": [
     "# model.load_weights(\"/home/sim/notebooks/relaynet_pytorch/\"+saved_name+\".hdf5\")\n",
     "# saved_name = 'notnormalised_bs50_ep_500_01'\n",
-    "saved_name = 'notnormalised_bs40_ep_150'\n",
-    "model.load_weights(\"/home/sim/notebooks/relaynet_pytorch/models/Normalised/\"+saved_name+\".hdf5\")"
+    "saved_name = 'weightingval1_normalised_atriumventriclesubract_bs40_ep_200'\n",
+    "model.load_weights(check_directory+\"/models/Normalised/\"+saved_name+\".hdf5\")"
    ]
   },
   {
@@ -409,46 +385,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for i in range(15,16):\n",
-    "ind = 0\n",
+    "# def one_hot_encode(inp, num_classes):\n",
+    "#     h,w = inp.shape\n",
+    "#     encoding = np.zeros(( h, w, num_classes))\n",
+    "#     for i in range(num_classes):\n",
+    "#         encoding[:,:,i] = inp == i\n",
+    "#     return encoding\n",
     "\n",
-    "# Raw Test Image \n",
-    "testing_image = raw_images[ind]\n",
-    "test_labels=labels\n",
-    "testing_image = testing_image[:,:64]\n",
+    "# def list_of_labels(label_img, num_classes):\n",
     "\n",
+    "#     print(label_img.shape)\n",
+    "#     train_labels = one_hot_encode(label_img, num_classes)\n",
+    "#     return train_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "overall_stats = []\n",
+    "# for i in range(len(filenames)):\n",
+    "for i in range(2):\n",
+    "    ind = i\n",
     "\n",
-    "plt.figure(figsize=(20,10))\n",
-    "plt.imshow(testing_image, cmap=plt.cm.gray)\n",
+    "    # Raw Test Image \n",
+    "    testing_image = raw_images[ind]\n",
+    "    test_label = manual_labels[ind]\n",
+    "    true_id = ids[ind]\n",
+    "    \n",
+    "    h,w = testing_image.shape\n",
     "\n",
-    "# # Manual Test Image \n",
-    "# plt.figure(figsize=(20,10))\n",
-    "# plt.imshow(labels[ind])\n",
+    "    testing_image = testing_image.reshape((1,h,w,1))\n",
+    "    prediction = model.predict(testing_image)\n",
+    "    prediction = np.squeeze(prediction,axis = 0)\n",
     "\n",
-    "# testing_image = segmented_images[0]\n",
-    "h,w = testing_image.shape\n",
+    "    prediction = np.reshape(prediction,(h,w,8))\n",
     "\n",
-    "testing_image = testing_image.reshape((1,h,w,1))\n",
-    "prediction = model.predict(testing_image)\n",
-    "prediction = np.squeeze(prediction,axis = 0)\n",
+    "    print(prediction.shape)\n",
+    "    predicted_id = np.zeros((h,w))\n",
+    "    # ground = np.zeros((h,w))\n",
     "\n",
+    "    for i in range(h):\n",
+    "        for j in range(w):\n",
+    "            index = np.argmax(prediction[i][j]) # doing pixel wise prediction\n",
+    "            predicted_id[i][j] = index\n",
+    "#     idx = np.asarray(ids[0])\n",
+    "#     print(idx.shape)\n",
     "\n",
-    "prediction = np.reshape(prediction,(h,w,8))\n",
+    "    # Just used to plot the colours\n",
+    "    print(np.unique(predicted_id))\n",
+    "    \n",
+    "    # Creating one hot encoding of true labels and predicted labels\n",
+    "    true_labels = list_of_labels(true_id,8)\n",
+    "    pred_labels = list_of_labels(predicted_id,8)\n",
+    "    \n",
+    "    stats = find_stats(true_labels, pred_labels)\n",
+    "    overall_stats.append(stats)\n",
+    "    \n",
+    "    # Plotting Labels of the layers\n",
+    "#     fig, axes = plt.subplots(nrows=1, ncols=8, figsize=(20,20))\n",
+    "#     for i, ax in enumerate(axes):\n",
+    "#         ax.imshow((true_labels[:,:,i]), alpha=0.2)\n",
+    "#         ax.set_title(\"label \" + str(i))\n",
     "\n",
-    "print(prediction.shape)\n",
-    "output = np.zeros((h,w))\n",
-    "ground = np.zeros((h,w))\n",
-    "for i in range(h):\n",
-    "    for j in range(w):\n",
-    "        index = np.argmax(prediction[i][j])\n",
-    "        output[i][j] = index\n",
-    "idx = np.asarray(ids[0])\n",
-    "print(idx.shape)\n",
-    "\n",
-    "\n",
-    "color = label_img_to_rgb(output)\n",
-    "\n",
-    "plt.imshow(color)\n",
+    "#     fig, axes = plt.subplots(nrows=1, ncols=8, figsize=(20,20))\n",
+    "#     for i, ax in enumerate(axes):\n",
+    "#         ax.imshow((pred_labels[:,:,i]), alpha=0.2)\n",
+    "#         ax.set_title(\"label \" + str(i))\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    # color = label_img_to_rgb(predicted_id) \n",
+    "    \n",
+    "    \n",
+    "#     f, axs = plt.subplots(1,3,figsize=(20,20))\n",
+    "#     plt.subplot(131), plt.imshow(raw_images[ind], cmap = \"gray\")\n",
+    "#     plt.title('Raw OCT Image'), plt.xticks([]), plt.yticks([])\n",
+    "#     plt.subplot(132), plt.imshow(manual_labels[ind])\n",
+    "#     plt.title('Manually Labelled Image'), plt.xticks([]), plt.yticks([])\n",
+    "#     plt.subplot(133),plt.imshow(color)\n",
+    "#     plt.title('Automated Label'), plt.xticks([]), plt.yticks([])\n",
+    "#     plt.show()\n",
     "\n",
     "\n",
     "# fig, axes = plt.subplots(nrows=8, ncols=1, figsize=(20,20))\n",
@@ -464,21 +483,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# for i in range(len(overall_stats)):\n",
+    "#     print('Image: {}, Stats: {}'.format(i,overall_stats[i]))\n",
+    "#     TP,FP,TN,FN,Acc, Precision, Recall, Dice = overall_stats[i]\n",
+    "#     print('Image:',i)\n",
+    "#     print('TP: {}, FP: {}, TN: {}, FN: {}, Class Accuracy: {}, Precision: {}, Recall: {}, Dice: {}'.format(TP,FP,TN,FN,Acc, Precision, Recall, Dice))\n",
+    "#     print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, axs = plt.subplots(1,3,figsize=(20,20))\n",
+    "plt.subplot(131), plt.imshow(raw_images[ind], cmap = \"gray\")\n",
+    "plt.title('Raw OCT Image'), plt.xticks([]), plt.yticks([])\n",
+    "plt.subplot(132), plt.imshow(manual_labels[ind])\n",
+    "plt.title('Manually Labelled Image'), plt.xticks([]), plt.yticks([])\n",
+    "plt.subplot(133),plt.imshow(color)\n",
+    "plt.title('Automated Label'), plt.xticks([]), plt.yticks([])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# for i in range(15,16):\n",
     "ind = 0\n",
     "\n",
     "# Raw Test Image \n",
     "testing_image = raw_images[ind]\n",
-    "test_labels=labels\n",
-    "testing_image = testing_image[:,:64]\n",
+    "test_labels = manual_labels[ind]\n",
+    "testing_image = testing_image[:,:]\n",
     "# segmented_images = segment_image(testing_image, 0, 600, 64)\n",
-    "\n",
-    "plt.figure(figsize=(20,10))\n",
-    "plt.imshow(testing_image, cmap=plt.cm.gray)\n",
-    "\n",
-    "# # Manual Test Image \n",
-    "# plt.figure(figsize=(20,10))\n",
-    "# plt.imshow(labels[ind])\n",
     "\n",
     "# testing_image = segmented_images[0]\n",
     "h,w = testing_image.shape\n",
@@ -486,7 +528,6 @@
     "testing_image = testing_image.reshape((1,h,w,1))\n",
     "prediction = model.predict(testing_image)\n",
     "prediction = np.squeeze(prediction,axis = 0)\n",
-    "\n",
     "\n",
     "prediction = np.reshape(prediction,(h,w,8))\n",
     "\n",
@@ -499,18 +540,7 @@
     "        output[i][j] = index\n",
     "idx = np.asarray(ids[0])\n",
     "print(idx.shape)\n",
-    "\n",
-    "\n",
-    "color = label_img_to_rgb(output)\n",
-    "\n",
-    "plt.imshow(color)\n",
-    "\n",
-    "\n",
-    "# fig, axes = plt.subplots(nrows=8, ncols=1, figsize=(20,20))\n",
-    "# for i, ax in enumerate(axes):\n",
-    "#     ax.imshow(idx[:,:,i])\n",
-    "#     ax.set_title(\"slice \" + str(i))\n",
-    "# plt.show()\n"
+    "color = label_img_to_rgb(output)"
    ]
   }
  ],
