Got back Normalise File, removed white from images

--- a/delete_files.ipynb
+++ b/delete_files.ipynb
@@ -36,40 +36,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def atoi(text) : \n",
-    "    return int(text) if text.isdigit() else text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def natural_keys(text) :\n",
-    "    return [atoi(c) for c in re.split('(\\d+)', text)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def list_all_files(directory):\n",
-    "    from os import listdir\n",
-    "    from os.path import isfile, join\n",
-    "    all_labels_files = [f for f in listdir(directory) if isfile(join(directory, f))]\n",
-    "    all_labels_files.sort()\n",
-    "    return all_labels_files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "new_file_list = ['H1_N01848_LA_1_272', 'H1_N01848_LA_1_388', 'H1_N01848_LV_1_194', 'H1_N01848_LV_1_300', 'H1_N01848_RVS_1_244', 'H1_N01848_RVS_1_300', 'H2_N02047_LA_1_241', 'H2_N02047_LA_1_257', 'H2_N02047_LVS_1_400', 'H2_N02047_LVS_1_420', 'H2_N02047_LV_1_194', 'H2_N02047_LV_1_400', 'H2_N02047_RA_1_380', 'H2_N02047_RA_1_400', 'H2_N02047_RVS_1_334', 'H2_N02047_RVS_1_400', 'H3_N02186_LA_1_400', 'H3_N02186_LA_1_416', 'H3_N02186_LVS_1_265', 'H3_N02186_LVS_1_676', 'H3_N02186_RA_1_380', 'H3_N02186_RA_1_400', 'H3_N02186_RVS_1_400', 'H3_N02186_RVS_1_420', 'H3_N02186_RV_1_270', 'H3_N02186_RV_1_400', 'H4_N03210_LVS_1_390', 'H4_N03210_LVS_1_400', 'H4_N03210_LV_1_400', 'H4_N03210_RA_1_400', 'H4_N03210_RA_1_440', 'H4_N03210_RVS_1_400', 'H4_N03210_RVS_1_420', 'H4_N03210_RV_1_390', 'H4_N03210_RV_1_400', 'H5_N03290_LA_1_380', 'H5_N03290_LA_1_400', 'H5_N03290_LVS_1_361', 'H5_N03290_LVS_1_400', 'H5_N03290_LV_1_400', 'H5_N03290_LV_1_420', 'H5_N03290_RVS_1_185', 'H5_N03290_RVS_1_400', 'H6_N03320_LA_1_391', 'H6_N03320_LA_1_450', 'H6_N03320_LVS_1_400', 'H6_N03320_LVS_1_455', 'H6_N03320_LV_1_404', 'H6_N03320_LV_1_620', 'H6_N03320_RA_1_420', 'H6_N03320_RVS_1_400', 'H6_N03320_RVS_1_476', 'H7_N03555_LVS_1_306', 'H7_N03555_LV_1_240', 'H7_N03555_RA_1_302', 'H7_N03555_RVS_1_41', 'H7_N03555_RV_1_221', 'H8_N03585_RA_1_345', 'H8_N03585_RVS_1_398', 'H9_N03857_LVS_1_420', 'H9_N03857_LV_1_580', 'H9_N03857_RVS_1_400', 'H9_N03857_RVS_1_420', 'H9_N03857_RV_1_380', 'H9_N03857_RV_1_425']"
    ]
   },
@@ -103,7 +69,7 @@
    "outputs": [],
    "source": [
     "def remove_files_atrium(mydir, ext):\n",
-    "    filelist = [ f for f in os.listdir(mydir) if f.endswith(ext) ]\n",
+    "    filelist = [ f for f in os.listdir(mydir) if f.endswith(ext) and f!= '.DS_Store']\n",
     "    \n",
     "#     print(len(filelist))\n",
     "    for f in filelist:\n",
