--- a/remove_white_from_images.ipynb
+++ b/remove_white_from_images.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Useful Links\n",
-    "https://stackoverflow.com/questions/41979481/mean-pixel-subtraction-for-numpy-array\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -66,13 +58,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def list_all_files(directory):\n",
+    "    from os import listdir\n",
+    "    from os.path import isfile, join\n",
+    "    all_labels_files = [f for f in listdir(directory) if isfile(join(directory, f)) and f != '.DS_Store']\n",
+    "    all_labels_files.sort()\n",
+    "    return all_labels_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Setting the directories\n",
     "import os\n",
     "\n",
-    "# wanted_folder = 'alldata/'\n",
+    "wanted_folder = 'alldata/'\n",
     "# wanted_folder = 'pruned/'\n",
     "# wanted_folder = 'Atrium/'\n",
-    "wanted_folder = 'Ventricle/'\n",
+    "# wanted_folder = 'Ventricle/'\n",
     "\n",
     "cwd = os.getcwd()\n",
     "cwd = cwd + '/datasets-24-aug/OCTData/'+wanted_folder\n",
@@ -85,28 +91,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "current_folder = cwd + 'whole_raw_image/'\n",
+    "# current_folder = cwd + 'whole_raw_image/'\n",
     "# current_folder = cwd + 'bilateral_filter/'\n",
     "# current_folder = cwd + 'bm3d/'\n",
-    "# current_folder = cwd + 'nl_means_denoised/'\n",
+    "current_folder = cwd + 'nl_means_denoised/'\n",
     "\n",
-    "print(current_folder)\n",
-    "# whole_raw_image_folder = cwd + 'whole_raw_image/'\n",
-    "# print(whole_raw_image_folder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def list_all_files(directory):\n",
-    "    from os import listdir\n",
-    "    from os.path import isfile, join\n",
-    "    all_labels_files = [f for f in listdir(directory) if isfile(join(directory, f))and f != '.DS_Store']\n",
-    "    all_labels_files.sort()\n",
-    "    return all_labels_files"
+    "print(current_folder)"
    ]
   },
   {
@@ -125,8 +115,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# unwanted_files = ['con_H1_N01848_LV_1_194.tif','con_H1_N01848_LV_1_300.tif','con_H2_N02047_LVS_1_400.tif','con_H2_N02047_LVS_1_420.tif','con_H3_N02186_LVS_1_265.tif','con_H3_N02186_RV_1_270.tif','con_H3_N02186_RV_1_400.tif','con_H4_N03210_LV_1_400.tif','con_H4_N03210_RV_1_390.tif','con_H4_N03210_RV_1_400.tif','con_H5_N03290_LV_1_420.tif','con_H6_N03320_LVS_1_455.tif','con_H6_N03320_LV_1_404.tif','con_H6_N03320_RA_1_420.tif','con_H8_N03585_RA_1_345.tif']\n",
-    "# unwanted_files = ['.DS_Store'] # making filenames without .DS_store"
+    "# filenames = filenames[1:] # making filenames without .DS_store\n",
+    "# unwanted_files = ['.DS_Store']"
    ]
   },
   {
@@ -183,28 +173,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(cwd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mean_image = np.mean(raw_images, axis=0)\n",
-    "plt.imshow(mean_image)\n",
-    "name = cwd + wanted_folder.replace('/','')+'_mean_image.png'\n",
-    "print(name)\n",
-    "imsave(name, mean_image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "plt.imshow(raw_images[0])"
    ]
   },
@@ -214,10 +182,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normalisedimages = []\n",
-    "normalised_images = raw_images - mean_image\n",
-    "print(normalised_images.shape)\n",
-    "plt.imshow(normalised_images[3])"
+    "images = np.copy(raw_images)\n",
+    "images[:,440:,:] = 0\n",
+    "plt.imshow(images[0])"
    ]
   },
   {
@@ -226,29 +193,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(cwd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for item in range(len(normalised_images)):\n",
+    "for item in range(len(images)):\n",
     "    name = filenames[item]\n",
-    "    normalised_file = cwd + 'normalised_raw_image/'+ name\n",
     "    \n",
+    "    white_removed_file = current_folder + name\n",
+    "    print(white_removed_file)\n",
     "    # Saving files\n",
-    "    imsave(normalised_file, normalised_images[item])"
+    "    imsave(white_removed_file, images[item])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
